--- a/visualization.qrc
+++ b/visualization.qrc
@@ -2,6 +2,15 @@
 <RCC version="1.0">
 <qresource>
 	<file>images/fhq2015.png</file>
+
+	<file>images/teams/altgtu.png</file>
+	<file>images/teams/brizz.png</file>
+	<file>images/teams/h34dump.png</file>
+	<file>images/teams/keva.png</file>
+	<file>images/teams/life.png</file>
+	<file>images/teams/mustang.png</file>
+	<file>images/teams/yozik.png</file>
+
 	<file>fonts/hack.regular.ttf</file>
 </qresource>
 </RCC>
